--- a/WpfApp1/Views/MainWindow.xaml
+++ b/WpfApp1/Views/MainWindow.xaml
@@ -2,52 +2,32 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Contact Book" Height="450" Width="800">
-    <Window.Resources>
-        <Style TargetType="Button">
-            <Setter Property="Background" Value="LightBlue"/>
-            <Setter Property="Foreground" Value="DarkBlue"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="Padding" Value="10"/>
-        </Style>
-    </Window.Resources>
     <Grid>
         <StackPanel Margin="20">
-            <TextBlock Text="Функции приложения:" FontSize="16" FontWeight="Bold" />
-            <TextBlock Text="1. Поиск контактов по имени, фамилии, телефону или email." />
-            <TextBlock Text="2. Добавление новых контактов." />
-            <TextBlock Text="3. Просмотр всех контактов." Margin="0,10,0,0" />
-
-            <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                <Button Content="Find All" Click="FindAllButton_Click" Width="100"/> 
-                <Button Content="Search" Click="SearchButton_Click" Width="100"/>
-                <Button Content="Add Contact" Click="AddContact_Click" Width="100"/>
-            </StackPanel>
-
-            <TextBlock Text="Результаты поиска:" FontSize="16" FontWeight="Bold" Margin="0,20,0,0"/>
-            <ListView ItemsSource="{Binding Contacts}">
+            <TextBlock Text="Поиск контакта:" Margin="0,0,0,10"/>
+            <TextBox Width="200" 
+                     Text="{Binding SearchQuery, UpdateSourceTrigger=PropertyChanged}" 
+                     Margin="0,0,0,10"/>
+            <Button Content="Поиск" 
+                    Command="{Binding SearchCommand}" 
+                    Width="100" 
+                    Margin="0,0,0,10"/>
+            
+            <TextBlock Text="Список контактов:" Margin="0,10,0,5"/>
+            <ListView ItemsSource="{Binding Contacts}" 
+                      Margin="0,0,0,10">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
                             <TextBlock Text="{Binding FirstName}" FontWeight="Bold"/>
                             <TextBlock Text="{Binding LastName}" />
-                            <ItemsControl ItemsSource="{Binding EmailList}">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Text="{Binding Value}" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-                            <ItemsControl ItemsSource="{Binding PhoneNumberList}">
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Text="{Binding Value}" />
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
                         </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+            <Button Content="Добавить контакт" 
+                    Command="{Binding AddContactCommand}" 
+                    Width="100"/>
         </StackPanel>
-    </Grid></Window>
+    </Grid>
+</Window>
