--- a/WpfApp1/Views/SearchContactDialog.xaml
+++ b/WpfApp1/Views/SearchContactDialog.xaml
@@ -4,10 +4,17 @@
         Title="Поиск контакта" Height="200" Width="300">
     <StackPanel Margin="20">
         <TextBlock Text="Введите имя, фамилию, телефон или email:" />
-        <TextBox Name="QueryTextBox" />
+        <TextBox Name="QueryTextBox" 
+                 Text="{Binding SearchQuery, UpdateSourceTrigger=PropertyChanged}" 
+                 Margin="0,0,0,10"/>
         
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="Поиск" Click="SearchButton_Click" Width="80" Margin="0,0,5,0"/>
-            <Button Content="Отмена" Click="CancelButton_Click" Width="80"/>
+            <Button Content="Поиск" 
+                    Command="{Binding SearchCommand}" 
+                    Width="80" Margin="0,0,5,0"/>
+            <Button Content="Отмена" 
+                    Command="{Binding CancelCommand}" 
+                    Width="80"/>
         </StackPanel>
-    </StackPanel></Window>
+    </StackPanel>
+</Window>
